--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <title>MyTeam</title>
 </head>
 <body>
+
+  <header class="site-header header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="header__link" href="./index.html">
+          <img class="header__link-img" src="./images/myteam-logo.svg" width="160" height="40" alt="site logo">
+        </a>
+        <nav class="header__menu menu">
+          <button class="menu__btn">&#215;</button>
+          <ol class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="./index.html">home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">about</a>
+            </li>
+            <li class="menu__item right">
+              <a class="menu__link menu__link--link" href="#">contact us</a>
+            </li>
+          </ol>
+        </nav>
+        <div class="header__btn">
+          <button class="header__button">&#9776;</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="site-main">
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero__title-box">
+          <h1 class="hero__title">Find the best <span class="hero__title-red">talent</span></h1>
+        </div>
+        <div class="hero__text-box">
+          <span class="hero__link"></span>
+          <p class="hero__text">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
   
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
