add about & content page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,59 @@
       </div>
     </section>
 
+    <section class="about">
+      <div class="container">
+        <div class="about__list">
+          <div class="about__left">
+            <span class="about__line"></span>
+            <h2 class="about__title">Build & manage distributed teams like no one else.</h2>
+          </div>
+          <ol class="about__right">
+            <li class="about__item">
+              <strong class="about__subject">Experienced Individuals</strong>
+              <p class="about__desc">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </li>
+            <li class="about__item">
+              <strong class="about__subject">Easy to Implement</strong>
+              <p class="about__desc">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+            </li>
+            <li class="about__item">
+              <strong class="about__subject">Enhanced Productivity</strong>
+              <p class="about__desc">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+
+    <section class="content">
+      <div class="container">
+        <div class="content__title-box">
+          <h2 class="content__title">Delivering real results for top companies. Some of our <span class="content__title content__title--desc">success stories.</span></h2>
+        </div>
+        <ul class="content__list">
+          <li class="content__item">
+            <p class="content__text"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+            <strong class="content__subject">Kady Baker</strong>
+            <em class="content__desc">Product Manager at Bookmark</em>
+            <img class="content__img" src="./images/Kady-Baker-img.png" srcset="./images/Kady-Baker-img.png 1x, ./images/Kady-Baker-img@2x.png 2x" width="62" height="62" alt="Kady Baker img">
+          </li>
+          <li class="content__item">
+            <p class="content__text">“We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</p>
+            <strong class="content__subject">Aiysha Reese</strong>
+            <em class="content__desc">Founder of Manage</em>
+            <img class="content__img" src="./images/Aiysha-Reese-img.png" srcset="./images/Aiysha-Reese-img.png 1x, ./images/Aiysha-Reese-img@2x.png 2x" width="62" height="62" alt="Aiysha Reese img">
+          </li>
+          <li class="content__item">
+            <p class="content__text">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</p>
+            <strong class="content__subject">Arthur Clarke</strong>
+            <em class="content__desc">Co-founder of MyPhysio</em>
+            <img class="content__img" src="./images/Arthur-Clarke-img.png" srcset="./images/Arthur-Clarke-img.png 1x, ./images/Arthur-Clarke-img@2x.png 2x" width="62" height="62" alt="Arthur Clarke img">
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
   
 
