add direcrot section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a class="menu__link" href="./index.html">home</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">about</a>
+              <a class="menu__link" href="./about.html">about</a>
             </li>
             <li class="menu__item right">
               <a class="menu__link menu__link--link" href="#">contact us</a>
