add about scc stile to page

--- a/about.html
+++ b/about.html
@@ -85,6 +85,12 @@
             <span class="item__plus"></span>
           </li>
           <li class="director__item item">
+            <img class="item__img" src="./images/aden.png" srcset="./images/aden.png 1x, ./images/aden@2x.png 2x" width="96" height="96" alt="A picture of Griffin Wise smiling is depicted">
+            <strong class="item__title">Aden Allan</strong>
+            <em class="item__text">Head of Talent</em>
+            <span class="item__plus"></span>
+          </li>
+          <!-- <li class="director__item item">
             <strong class="item__title item__subject">Aden Allan</strong>
             <span class="item__desc">“Empowered teams create truly amazing products. Set the north star and let them follow it.”</span>
             <div class="item__link-box">
@@ -96,12 +102,14 @@
               </a>
             </div>
             <span class="item__plus item__x"></span>
-          </li>
+          </li> -->
         </ul>
       </div>
     </section>
 
   </main>
   
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
