Add a change to the hover

--- a/about.html
+++ b/about.html
@@ -64,31 +64,31 @@
             <img class="item__img" src="./images/cristion.png" srcset="./images/cristion.png 1x, ./images/cristion@2x.png 2x" width="96" height="96" alt="A picture of Cristian Duncan smiling is depicted">
             <strong class="item__title">Cristian Duncan</strong>
             <em class="item__text">Co-founder & COO</em>
-            <span class="item__plus-two"></span>
+            <span class="item__plus"></span>
           </li>
           <li class="director__item item">
             <img class="item__img" src="./images/cruz.png" srcset="./images/cruz.png 1x, ./images/cruz@2x.png 2x" width="96" height="96" alt="A picture of Cruz Hamer smiling is depicted">
             <strong class="item__title">Cruz Hamer</strong>
             <em class="item__text">Co-founder & CTO</em>
-            <span class="item__plus-there"></span>
+            <span class="item__plus"></span>
           </li>
           <li class="director__item item">
             <img class="item__img" src="./images/drake.png" srcset="./images/drake.png 1x, ./images/drake@2x.png 2x" width="96" height="96" alt="A picture of Drake Heaton smiling is depicted">
             <strong class="item__title">Drake Heaton</strong>
             <em class="item__text">Business Development Lead</em>
-            <span class="item__plus-four"></span>
+            <span class="item__plus"></span>
           </li>
           <li class="director__item item">
             <img class="item__img" src="./images/griffin.png" srcset="./images/griffin.png 1x, ./images/griffin@2x.png 2x" width="96" height="96" alt="A picture of Griffin Wise smiling is depicted">
             <strong class="item__title">Griffin Wise</strong>
             <em class="item__text">Lead Marketing</em>
-            <span class="item__plus-five"></span>
+            <span class="item__plus"></span>
           </li>
           <li class="director__item item">
             <img class="item__img" src="./images/aden.png" srcset="./images/aden.png 1x, ./images/aden@2x.png 2x" width="96" height="96" alt="A picture of Griffin Wise smiling is depicted">
             <strong class="item__title">Aden Allan</strong>
             <em class="item__text">Head of Talent</em>
-            <span class="item__plus-six"></span>
+            <span class="item__plus"></span>
           </li>
         </ul>
       </div>
